01-03-2023 :
    - JavaScript is now used for the Month Directory and Tag boxes for easier consistency across pages
    - New entries can be created by editing the arrays in main.js
        - Changes are reflected on the page automatically
        - All information is from main.js, editing pages to add a tag to the list is no longer needed

01-04-2023 :
    - Newest and ALL MONTH PAGES update AUTOMATICALLY!!!
    - Tag pages may have this in the future

01-09-2023 : 
    - Tag and Topic pages update automatically
    - Google Analytics is now active

01-10-2023 :
    - Home page boxes are automated