@@ -21,17 +21,21 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    
   </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0S8SMB69H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-Z0S8SMB69H"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'G-Z0S8SMB69H');
-</script>
+    gtag("config", "G-Z0S8SMB69H");
+  </script>
   <body>
     <div class="container">
       <div class="row page-header">
@@ -69,8 +73,14 @@
                       >Wearables</a
                     >
                   </li>
+                  
                 </ul>
               </div>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/js/changelog.txt" target="_blank"
+                  ><b><i>Update Log</i></b></a
+                >
+              </li>
             </li>
           </ul>
         </div>
@@ -87,6 +97,7 @@
         homeBox(3);
         homeBox(4);
       </script>
+    </div>
     <hr />
   </body>
 </html>
