@@ -82,6 +82,11 @@
                 </ul>
               </div>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/js/changelog.txt" target="_blank"
+                ><b><i>Update Log</i></b></a
+              >
+            </li>
           </ul>
         </div>
       </div>
